[package]
name = "bit-matrix"
version = "0.2.0"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for bit matrices and vectors."
keywords = ["container", "bit", "bitfield", "algebra"]
documentation = "http://pczarn.github.io/cfg/bit-matrix/index.html"
repository = "https://github.com/pczarn/bit-matrix"
license = "MIT/Apache-2.0"

[lib]
name = "bit_matrix"

[dependencies]
bit-vec = "0.4"
