[package]
name = "bit-matrix"
version = "0.6.0"

authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for bit matrices and vectors."
keywords = ["container", "bit", "bitfield", "algebra"]
documentation = "http://pczarn.github.io/cfg/bit-matrix/index.html"
repository = "https://github.com/pczarn/bit-matrix"
license = "MIT/Apache-2.0"

[lib]
name = "bit_matrix"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
bit-vec = { version = "0.6", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = ["bit-vec/std"]

serialize = ["serde", "bit-vec/serde"]
serde_std = ["std", "serde/std"]
serde_no_std = ["serde/alloc"]
